# End-to-end-Sale-Forecasting

./: .env.example  .gitignore  README.md  docker-compose.yaml  makefile  pyproject.toml  setup_airflow.sh  test_ranking_fix.py
airflow/config/: airflow.cfg
airflow/dags/: demo_dag.py  ml_dag.py  simple_dag.py
docker/: Dockerfile.airflow  Dockerfile.mlflow  requirements.txt
include/config/: __init__.py  config.py  config.yaml  settings.py
include/ml/: diagnostics.py  trainer.py  visualization.py
include/schemas/: input_schema.py
include/utilities/: data_gen.py  feature_engineering.py  mlflow_s3_utils.py  mlflow_utils.py  s3_verification.py  service_discovery.py
notebooks/: 01-lab.ipynb
src/: __init__.py
src/config/: __init__.py  config.py  config.yaml  settings.py
src/ml/: diagnostics.py  ensemble_model.py  trainer.py  visualization.py
src/schemas/: __init__.py
src/utilities/: data_gen.py  feature_engineering.py  mlflow_s3_utils.py  mlflow_utils.py  s3_verification.py  service_discovery.py
