[project]
name = "end-to-end-sales-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.4",
    "boto3>=1.40.21",
    "graphviz>=0.21",
    "holidays>=0.79",
    "lightgbm>=4.6.0",
    "mlflow>=3.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "nb-black-formatter>=1.0.1",
    "ruff>=0.12.10",
]
